--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-
+  <head>
     <title>Tutorial</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <!--paragraph tag-->
     <p>* This is paragraph 1</p>
     <p>* This is paragraph 2</p>
@@ -17,41 +17,43 @@
     <h6>heading6</h6>
 
     <!--inserting images-->
-    <img src="./images/img 1.jpg" alt="monitor" width="300px"> 
-    <br>
-    <img src="./images/img 2.jpg" alt="mobile" width="300px">
-    <br>
-    <img src="./images/img 3.jpg" alt="laptop and mobile" width="300px">
+    <img src="./images/img 1.jpg" alt="monitor" width="300px" />
+    <br />
+    <img src="./images/img 2.jpg" alt="mobile" width="300px" />
+    <br />
+    <img src="./images/img 3.jpg" alt="laptop and mobile" width="300px" />
 
     <!--creating order list-->
-    <ol> types of drinks
-        <li>coffee</li>
-        <li>tea</li>
-        <li>milk</li>
+    <ol>
+      types of drinks
+      <li>coffee</li>
+      <li>tea</li>
+      <li>milk</li>
     </ol>
 
     <!--creating unordered list-->
-    <ul> types of drinks
-        <li>cofee</li>
-        <li>tea</li>
-        <li>milk</li>
+    <ul>
+      types of drinks
+      <li>cofee</li>
+      <li>tea</li>
+      <li>milk</li>
     </ul>
 
     <!--inserting hyperlink-->
     <p>
-        <a href="/">hyperlink</a>
+      <a href="/">hyperlink</a>
     </p>
     <p>
-        <a href="https://www.youtube.com">youtube</a>
+      <a href="https://www.youtube.com">youtube</a>
     </p>
     <p>
-        <a href="mailto:giandrafty@gmail.com">giandrafty@gmail.com</a>
+      <a href="mailto:giandrafty@gmail.com">giandrafty@gmail.com</a>
     </p>
     <p>
-        <a href="tel:+639051536801">+639051536801</a>
+      <a href="tel:+639051536801">+639051536801</a>
     </p>
 
     <!--creating button-->
     <button type="button">click me</button>
-</body>
+  </body>
 </html>
